@@ -9,6 +9,8 @@
 * Disabled using desktop background from the GTK+ style since there is
     own color setting and changing the style may repaint the desktop.
 
+* Enforced desktop font update on the desktop resize with GTK+ 3.0.
+
 
 Changes on 1.2.3 since 1.2.2:
 
